Use the correct rootfs

--- a/template.yaml
+++ b/template.yaml
@@ -10,11 +10,11 @@ actions:
       url: https://storage.chromeos.kernelci.org/images/kernel/cros---chromeos-6.1-x86_64-chromiumos-x86_64.flavour.config+x86-chromebook/clang-14/modules.tar.xz
     nfsrootfs:
       compression: xz
-      url: https://people.collabora.com/~detlev/cros-codecs-tests/full.rootfs.tar.xz
+      url: https://people.collabora.com/~detlev/cros-codecs-tests/ccdec.rootfs.tar.xz
     os: oe
     ramdisk:
       compression: gz
-      url: https://people.collabora.com/~detlev/cros-codecs-tests/initrd.cpio.gz
+      url: https://people.collabora.com/~detlev/cros-codecs-tests/ccdec.initrd.cpio.gz
     timeout:
       minutes: 15
     to: tftp
